Fix spacing

--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,16 @@
 
 
 
+html {
+	width: 100% !important;
+}
+
 body {
 	background-image: linear-gradient(rgba(255,255,255,0.5), rgba(255,255,255,0.5)) , url(../images/autumn-1678028_1920.jpg) !important;
 	background-attachment: fixed;
 	background-size: cover;
 	font-family: "Open Sans" !important;
 	font-size: 12pt !important;
-	margin: 0px !important;
 	width: 100% !important;
 	padding-top: 50px;
 }
@@ -19,7 +22,21 @@ body {
 }
 
 .content {
+	margin: 0px 200px !important;
+}
+
+.content > .col-xs-12 {
 	padding: 50px !important;
+}
+
+@media (max-width:1000px) {
+	.content {
+		margin: 0px 100px !important;
+	}
+
+	.content > .col-xs-12 {
+		padding: 30px !important;
+	}
 }
 
 @media (max-width:800px) {
@@ -28,15 +45,15 @@ body {
     }
 
 	.content {
+		margin: 0px 15px !important;
+	}
+
+	.content > .col-xs-12 {
 		padding: 15px !important;
 	}
 
 	.copyright {
 		font-size: 8pt !important;
-	}
-
-	html {
-		margin: -20px !important;
 	}
 }
 
